--- a/gameshock_project/src/main/resources/application.properties
+++ b/gameshock_project/src/main/resources/application.properties
@@ -28,6 +28,7 @@ spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
 spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost/gameshock
 spring.datasource.username=postgres
@@ -49,7 +50,7 @@ spring.messages.basename=messages/message
 #==================================
 # = Security configuration
 #==================================
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 #spring.security.user.name=paolo
 #spring.security.user.password=paolo 
 
